--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.23",
+    "axios": "^0.26.1",
     "classnames": "^2.3.1",
+    "dotenv": "^16.0.0",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
